--- a/clean_agile.html
+++ b/clean_agile.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>line chart</title>
+    <title>Velocity of Reading Clean Agile</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
     <script>
       window.onload = function () {
@@ -14,6 +14,7 @@
             datasets: [{
               label: "2019年",
               data: [8.0, 9.4, 11.9, 15.4, 21.1, 23.4, 26.4, 28.0, 25.9, 20.5, 14.9, 10.3],
+              
             }],
           },
           options: {
@@ -24,6 +25,7 @@
     </script>
   </head>
   <body>
+    <h1>Velocity of Clean Agile</h1>
     <canvas id="fukuoka_temperature_chart" width="500" height="500"></canvas>
   </body>
 </html>
