--- a/clean_agile.html
+++ b/clean_agile.html
@@ -10,18 +10,26 @@
         new Chart(context, {
           type: 'line',
           data: {
-            labels: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+            labels: ['0', '11/21', '11/28', '12/5', '12/12', '12/19', '12/26', '2024/1/9', '1/16', '1/23', '1/30'],
             datasets: [{
-              label: "2019年",
-              data: [8.0, 9.4, 11.9, 15.4, 21.1, 23.4, 26.4, 28.0, 25.9, 20.5, 14.9, 10.3],
-              
+              label: 'Read Points',
+              data: [146, 137, 119],
+              borderColor: '#ff6347',
+              backgroundColor: '#ff6347',
             }],
           },
           options: {
+            scales: {
+              y: {
+                beginAtZero: true,
+              }
+            },
             responsive: false,
           }
         })
       }
+
+      // 別chartで既存Velocityから終了時点を算出できると良さそう
     </script>
   </head>
   <body>
