add points description

--- a/clean_agile.html
+++ b/clean_agile.html
@@ -34,6 +34,13 @@
   </head>
   <body>
     <h1>Velocity of Clean Agile</h1>
+    <ul>
+      <li><strong>Points: 146</strong></li>
+      <ul>
+        <li>Start Page: p.23</li>
+        <li>End Page: p.169</li>
+      </ul>
+    </ul>
     <canvas id="fukuoka_temperature_chart" width="500" height="500"></canvas>
   </body>
 </html>
