add points on december 5th

--- a/clean_agile.html
+++ b/clean_agile.html
@@ -5,7 +5,7 @@
     <title>Velocity of Reading Clean Agile</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
     <script>
-      const ACHIEVEMENT_DATA = [146, 137, 119]; // 実績を入力していく
+      const ACHIEVEMENT_DATA = [146, 137, 119, 97]; // 実績を入力していく
       const DAYS = ['0', '11/21', '11/28', '12/5', '12/19', '12/26', '2024/1/9', '1/16', '1/23', '1/30', '2/6', '2/13']; // 休みは除く
 
       const velocity = (data) => (data[0] - data[data.length - 1]) / (data.length - 1);
