chart ends at zero on y-axis

--- a/clean_agile.html
+++ b/clean_agile.html
@@ -42,6 +42,7 @@
             scales: {
               y: {
                 beginAtZero: true,
+                min: 0,
               }
             },
             plugins: {
