add description to y-axis

--- a/clean_agile.html
+++ b/clean_agile.html
@@ -43,7 +43,11 @@
               y: {
                 beginAtZero: true,
                 min: 0,
-              }
+                title: {
+                  display: true,
+                  text: 'Number of Pages',
+                },
+              },
             },
             plugins: {
               tooltip: {
