replace old version with display read points per day version

--- a/clean_agile/index.html
+++ b/clean_agile/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Velocity of Reading Clean Agile</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
-    <script src="chart.js"></script> <!-- 新しいJavaScriptファイルへの参照 -->
+    <script src="chart.js"></script>
   </head>
   <body>
     <h1>Velocity of Clean Agile</h1>
