add: Add chart download button and ogp image

--- a/clean_agile/index.html
+++ b/clean_agile/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Velocity of Reading Clean Agile</title>
+    <meta property="og:title" content="Velocity of Reading Clean Agile" />
+    <meta property="og:description" content="Velocity of Reading Clean Agile" />
+    <meta property="og:url" content="https://da-yoshi-k.github.io/burn-down-chart-for-reading-sessions/clean_agile/" />
+    <meta property="og:image" content="https://da-yoshi-k.github.io/burn-down-chart-for-reading-sessions/clean_agile/image/clean_agile_burn_down.png" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
     <script src="chart.js"></script>
   </head>
@@ -19,5 +23,6 @@
       <li id="velocity"></li>
     </ul>
     <canvas id="clean_agile_burn_down" width="500" height="500"></canvas>
+    <button id="download-btn">グラフをダウンロード</button>
   </body>
 </html>
