--- a/clean_agile/index.html
+++ b/clean_agile/index.html
@@ -23,6 +23,6 @@
       <li id="velocity"></li>
     </ul>
     <canvas id="clean_agile_burn_down" width="500" height="500"></canvas>
-    <button id="download-btn">グラフをダウンロード</button>
+    <button id="download-btn">Download Chart</button>
   </body>
 </html>
