change: Updated Open URLs to other repository

--- a/clean_agile/index.html
+++ b/clean_agile/index.html
@@ -5,8 +5,8 @@
     <title>Velocity of Reading Clean Agile</title>
     <meta property="og:title" content="Velocity of Reading Clean Agile" />
     <meta property="og:description" content="Velocity of Reading Clean Agile" />
-    <meta property="og:url" content="https://da-yoshi-k.github.io/burn-down-chart-for-reading-sessions/clean_agile/" />
-    <meta property="og:image" content="https://da-yoshi-k.github.io/burn-down-chart-for-reading-sessions/clean_agile/image/clean_agile_burn_down.png" />
+    <meta property="og:url" content="https://tarakish.github.io/burn-down-chart-for-reading-sessions/clean_agile/" />
+    <meta property="og:image" content="https://tarakish.github.io/burn-down-chart-for-reading-sessions/clean_agile/image/clean_agile_burn_down.png" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1"></script>
     <script src="chart.js"></script>
   </head>
